Ajustando el layout principal

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,10 @@ doctype 5
 html
 	head
 		title= title
-		link(rel='stylesheet', href='/stylesheets/style.css')
+		//link(rel='stylesheet', href='/stylesheets/style.css')
+		link(rel='stylesheet', href='/js/Ext/resources/css/ext-all-debug.css')
+  		script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
 		script(type='text/javascript', charset='utf-8', src='/js/bootstrap.js')
+		script(type='text/javascript', charset='utf-8', src='/js/main.js')
 	body
 		block content
